force-app/main/default/objects/Student__c/fields/Available_Time__c.field-meta.xml
<CustomField>
    <fullName>Available_Time__c</fullName>
    <label>Available Time</label>
    <type>Time</type>
</CustomField>