force-app/main/default/objects/Student__c/fields/CGPA__c.field-meta.xml
<CustomField>
    <fullName>CGPA__c</fullName>
    <label>CGPA</label>
    <precision>6</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>