force-app/main/default/objects/Student__c/fields/Date_of_join__c.field-meta.xml
<CustomField>
    <fullName>Date_of_join__c</fullName>
    <label>Date of join</label>
    <type>DateTime</type>
</CustomField>