force-app/main/default/objects/Student__c/fields/Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid__c</fullName>
    <description>To check the fees paid by the student</description>
    <inlineHelpText>To check the fees paid by the student</inlineHelpText>
    <label>Fees Paid</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>