force-app/main/default/objects/Student__c/fields/Passed_out__c.field-meta.xml
<CustomField>
    <fullName>Passed_out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to verify if the student is passed out or still a student</description>
    <inlineHelpText>to verify if the student is passed out or still a student</inlineHelpText>
    <label>Passed out</label>
    <type>Checkbox</type>
</CustomField>