force-app/main/default/objects/Student__c/fields/Register_Number__c.field-meta.xml
<CustomField>
    <fullName>Register_Number__c</fullName>
    <label>Register Number</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>