force-app/main/default/objects/Student__c/fields/Reviews__c.field-meta.xml
<CustomField>
    <fullName>Reviews__c</fullName>
    <label>Reviews</label>
    <length>255</length>
    <type>Text</type>
</CustomField>