force-app/main/default/objects/Student__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angular</fullName>
            </value>
            <value>
                <fullName>Bootstrap</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Jquery</fullName>
            </value>
            <value>
                <fullName>Mongo DB</fullName>
            </value>
            <value>
                <fullName>MySQL</fullName>
            </value>
            <value>
                <fullName>Node JS</fullName>
            </value>
            <value>
                <fullName>React JS</fullName>
            </value>
            <value>
                <fullName>Vue JS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>