force-app/main/default/objects/Student__c/fields/Student_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_First_Name__c</fullName>
    <externalId>true</externalId>
    <label>Student First Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>