force-app/main/default/objects/Student__c/validationRules/Name_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Student_First_Name__c  ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Student_First_Name__c</errorDisplayField>
    <errorMessage>Please provide only alphabets</errorMessage>
</ValidationRule>