force-app/main/default/objects/Student__c/validationRules/Phone_number_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (REGEX(Contact_Number__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorMessage>Contact number should be 10 Digits</errorMessage>
</ValidationRule>